--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="#1E88E5"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:layout_marginStart="8dp">
 
         <TextView
             android:id="@+id/leftTextView"
@@ -33,7 +34,8 @@
         android:layout_alignParentEnd="true"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="#E1477B"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:layout_marginEnd="8dp">
 
         <TextView
             android:id="@+id/rightTextView"
